force-app/main/default/objects/Application_Log__c/Application_Log__c.object-meta.xml
<CustomObject>
    <label>Application Log</label>
    <nameField>
        <label>Automation Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>