force-app/main/default/objects/Application_Log__c/fields/Context_User__c.field-meta.xml
<CustomField>
    <fullName>Context_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Context_User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>