force-app/main/default/objects/Application_Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FLOW</fullName>
            </value>
            <value>
                <fullName>APEX</fullName>
            </value>
            <value>
                <fullName>INTEGRATION</fullName>
            </value>
            <value>
                <fullName>VALIDATION</fullName>
            </value>
            <value>
                <fullName>SECURITY</fullName>
            </value>
            <value>
                <fullName>DATA</fullName>
            </value>
            <value>
                <fullName>PLATFORM</fullName>
            </value>
            <value>
                <fullName>BATCH</fullName>
            </value>
            <value>
                <fullName>UI</fullName>
            </value>
            <value>
                <fullName>CONFIGURATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>